--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
 group = 'com.gmail.necnionch.myplugin'
 version = '1.0.0-SNAPSHOT'
 
+configurations {
+    collectJars
+}
+
 repositories {
     mavenCentral()
     maven {
@@ -19,6 +23,9 @@ repositories {
         name = 'CodeMC'
         url = 'https://repo.codemc.org/repository/maven-public/'
     }
+    maven {
+        url = "https://jitpack.io"
+    }
 
 }
 
@@ -27,6 +34,9 @@ dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
     implementation files("libs/CommandAPI.jar")
     implementation group: 'de.tr7zw', name: 'item-nbt-api-plugin', version: '2.8.0'
+
+    implementation 'net.wesjd:anvilgui:1.5.3-SNAPSHOT'
+    collectJars 'net.wesjd:anvilgui:1.5.3-SNAPSHOT'
 
 }
 
@@ -37,6 +47,14 @@ java {
     targetCompatibility = javaVersion
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    }
+}
+
+jar {
+    from {
+        configurations.collectJars.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
     }
 }
 
