--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,4 @@ main: com.gmail.necnionch.myplugin.ceguipanel.bukkit.GUIPanelPlugin
 api-version: 1.15
 depend: [ CommandAPI ]
 authors: [ Necnion8 ]
+load: STARTUP
