--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'com.gmail.necnionch.myplugin'
-version = '1.1.0-SNAPSHOT'
+version = '1.1.0-SNAPSHOT-1.19'
 
 configurations {
     collectJars
@@ -31,16 +31,17 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
-    compileOnly 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
-    implementation files("libs/CommandAPI.jar")
-    implementation files("libs/spigot-1.15.2.jar")
+    compileOnly 'org.spigotmc:spigot-api:1.19.2-R0.1-SNAPSHOT'
+    implementation files("libs/CommandAPI-8.5.1.jar")
+    implementation files("libs/spigot-1.19.2-R0.1-SNAPSHOT.jar")
+    implementation files("libs/brigadier-1.0.18.jar")
 
     implementation 'net.wesjd:anvilgui:1.5.3-SNAPSHOT'
     collectJars 'net.wesjd:anvilgui:1.5.3-SNAPSHOT'
 
 }
 
-def targetJavaVersion = 8
+def targetJavaVersion = 17
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
