Edit: サンプル設定を削除

--- a/src/main/resources/bukkit-config.yml
+++ b/src/main/resources/bukkit-config.yml
@@ -1,60 +1,2 @@
 
-panels:
-  example:
-    display: "Display Title"
-    size: chest9x1
-    slots:
-      - slot: 0
-        action: open
-        panel: example2
-        icon:
-          display: "Icon Display Disabled"
-          lores: []
-          itemstack:
-            ==: org.bukkit.ItemStack
-
-      - slot: 0
-        action: open
-        panel: example2
-        icon:
-          display: "Icon Display"
-          itemstack:
-            ==: org.bukkit.ItemStack
-            type: BARRIER
-
-      - slot: 1
-        action: close
-
-      - slot: 2
-        action: none
-
-      - slot: 3
-        action: function
-        function: rozmb2:on_gui
-        keep_open: false
-
-      - slot: 4
-        action: giveitem
-        itemstack:
-          ==: org.bukkit.ItemStack
-
-      - slot: 5
-        action: giveitem
-        itemstack:
-          ==: org.bukkit.ItemStack
-        required:
-          type: hasitem  # removeitem
-          itemstack:
-            ==: org.bukkit.ItemStack
-
-      - slot: 6
-        action: giveitem
-        itemstack:
-          ==: org.bukkit.ItemStack
-        required:
-          type: scoreboard
-          objective: objective_name
-          name: "@s"
-          match_type: equal  # ==, >=, <=, >, <
-          value: 1
-
+panels: {}
